Added google docs for waitlist

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <div></div>
               <a
                 class="block text-grborder-gray-500 hover:text-black"
-                href="#waitlist"
+                href="https://docs.google.com/forms/d/e/1FAIpQLScMI3ARBIBpV0xLQxZ05ZMngwgX7NiFdgJkDYui1_pEz5dLLw/viewform?usp=sf_link"
                 >Join Waitlist</a
               >
             </button>
@@ -124,11 +124,11 @@
                 <a href="#trynow">Try Now</a>
               </button>
 
-              <a href="#waitlist">
+              <a href="#https://docs.google.com/forms/d/e/1FAIpQLScMI3ARBIBpV0xLQxZ05ZMngwgX7NiFdgJkDYui1_pEz5dLLw/viewform?usp=sf_link">
                 <button
                   class="flex justify-center items-center hero_button text-center bg-primary rounded-md text-2xl text-white hover:bg-purple-400"
                 >
-                  <a href="#waitlist">Join Waitlist</a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLScMI3ARBIBpV0xLQxZ05ZMngwgX7NiFdgJkDYui1_pEz5dLLw/viewform?usp=sf_link">Join Waitlist</a>
                 </button>
               </a>
             </div>
@@ -424,18 +424,14 @@
             </p>
           </div>
           <div class="flex flex-col justify-center items-center">
-            <form class="flex flex-col justify-center items-center space-y-3">
-              <input
-                type="text"
-                placeholder="Enter your email"
-                class="border border-gray-300 px-6 py-2 w-full rounded-md outline-none text-lg sm:text-xl focus:border-green-200"
-              />
+            
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScMI3ARBIBpV0xLQxZ05ZMngwgX7NiFdgJkDYui1_pEz5dLLw/viewform?usp=sf_link">
               <button
-                class="bg-buttonbg text-white py-2 px-4 shadow-md rounded-md w-44 sm:text-2xl lg:px-8"
+                class="bg-buttonbg text-white py-2 px-4 shadow-md rounded-md w-44 sm:text-2xl lg:px-8 hover:bg-purple-400  "
               >
-                Submit
+                Join Now
               </button>
-            </form>
+            </a>
           </div>
         </section>
       </div>
